# qr-code-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.cpp  index.html  main.cpp  run.sh  styles.css
include/: Bitmap.h  Color.h  ColorPalette.h  Image.h  Menu.h  QRCode.h  checksum.h  constants.h  factory.h  qrActions.h  qrFactory.h  utils.h
scripts/: build.sh  run.sh
src/: Bitmap.cpp  Color.cpp  ColorPalette.cpp  Image.cpp  Menu.cpp  QRCode.cpp  checksum.cpp  factory.cpp  helloWorld.cpp  qrActions.cpp  qrFactory.cpp  utils.cpp
